Added readme for main folder.

--- a/Javascript/ObjectOrientedProgramming/index.html
+++ b/Javascript/ObjectOrientedProgramming/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-
+    <h1 align="center">
+        Object Oriented Programming using JavaScript (ES6)
+    </h1>
 </body>
 
 </html>
